DataGrid: Fix data rows height when the columnAutoWidth option is enabled on iOS 10 (T671939)

--- a/styles/widgets/common/gridBase.less
+++ b/styles/widgets/common/gridBase.less
@@ -727,9 +727,10 @@
 
     .dx-gridbase-container > .dx-@{widgetName}-rowsview {
         flex: auto;
+        height: auto; // T671939
 
         &.dx-scrollable {
-            display: flex;  
+            display: flex;
 
             .dx-scrollable-wrapper {
                 flex: 1;
